GNOME Bugzilla – Bug 703823
Shouldn't be able to rename a folder to an empty name
Last modified: 2013-07-30 17:42:05 UTC
Created attachment 248661 [details] [review] Patch to prevent renaming folders with empty names Brasero lets me rename a folder in a data disc project such that it has no name. 1. Start Brasero 2. Data Project 3. New Folder (rightmost toolbar button) 4. Double-click / right-click -> rename 5. Delete existing name 5. Hit return to commit rename Burning the disc then fails with: libisofs reported an error while creating directory "//"
Patch merged.