Don't allow folders in a data disc to have an empty name

Disc creation fails when a folder name is empty.

https://bugzilla.gnome.org/show_bug.cgi?id=703823