libbrasero-burn/brasero-data-project.c
@@ -1575,6 +1575,11 @@ brasero_data_project_rename_node (BraseroDataProject *self,
 
 	priv = BRASERO_DATA_PROJECT_PRIVATE (self);
 
+	/* Don't allow rename to succeed if name is the empty string */
+	if (strlen (name) < 1) {
+		return FALSE;
+	}
+
 	/* make sure there isn't the same name in the directory: if so, that's 
 	 * simply not possible to rename. */
 	sibling = brasero_file_node_check_name_existence (node->parent, name);
