libparrillada-burn/parrillada-data-project.c
@@ -1581,6 +1581,11 @@ parrillada_data_project_rename_node (ParrilladaDataProject *self,
 
 	priv = PARRILLADA_DATA_PROJECT_PRIVATE (self);
 
+	/* Don't allow rename to succeed if name is the empty string */
+	if (strlen (name) < 1) {
+		return FALSE;
+	}
+
 	/* make sure there isn't the same name in the directory: if so, that's 
 	 * simply not possible to rename. */
 	sibling = parrillada_file_node_check_name_existence (node->parent, name);
